# ses598-space-robotics-and-ai-2026

./: .gitattributes  .gitignore  README.md
assignments/cart_pole_optimal_control/: README.md
assignments/cart_pole_optimal_control/cart_pole_optimal_control/: lqr_controller.py
assignments/first_order_boustrophedon_navigator/: CMakeLists.txt  README.md  package.xml
assignments/first_order_boustrophedon_navigator/first_order_boustrophedon_navigator/: add_metrics.py  apply_always_turn_fix.py  best_params.txt  boustrophedon_controller.py  boustrophedon_controller.py.before_corner_waypoints.bak  boustrophedon_controller.py.pre_turnmode.bak  fix_controller.py  generate_waypoints_fix.py
assignments/first_order_boustrophedon_navigator/msg/: PerformanceMetrics.msg
assignments/terrain_mapping_drone_control/: README.md
assignments/terrain_mapping_drone_control/3d_reconstruction/: rtabmap_mesh.mtl
assignments/terrain_mapping_drone_control/extra_credit_files/: deploy_extra_credit.sh  export_mesh.sh  launch_all.sh  px4_odom_converter.py  rtabmap.launch.py
assignments/terrain_mapping_drone_control/launch/: rtabmap.launch.py
assignments/terrain_mapping_drone_control/mesh_output/: rtabmap_poses.txt
midterm_project/: .gitignore  package.xml  setup.cfg  setup.py
midterm_project/config/: mission_config.yaml
midterm_project/launch/: planetary_landing.launch.py
midterm_project/midterm_project/: control_node.py  hazard_node.py  mapping_node.py  perception_node.py  planning_node.py
midterm_project/worlds/: planetary_landing.sdf
(+12 files in other folders)
